# queryquote2

./: .gitignore  README.md  code.md  package-lock.json  package.json  tests.csv
app/: globals.css  layout.js
app/(home)/: page.jsx
app/(routes)/_components/: MoviesFramePage.jsx  RouteBackLink.jsx  SearchResultsView.jsx
app/(routes)/debug/test-results/: page.jsx
app/(routes)/how/: page.jsx
app/(routes)/movies-now/: page.jsx
app/(routes)/search/: page.jsx
app/(routes)/transcripts/: page.jsx
app/(routes)/transcripts/[movie_id]/: page.jsx
app/api/search/: route.js
app/api/transcripts/: route.js
backend/: .gitignore  BACKEND_README.md  README.md  WEB_README.md  app.py  authority_compact.csv  diagnose.py  info.txt  pyproject.toml  run_web.py  textv2.txt  time.txt
backend/indexes/: v1  v2
backend/src/queryquote/: __init__.py  analyzer_v1.py  analyzer_v2.py  authority.py  cli.py  config.py  db_index.py  db_index_v2.py  evaluation.py  indexing.py  passages.py  preprocessing.py  quote_matching.py  ranking.py  search_engine.py  transcript_access.py  types.py  webapp.py
backend/tests/: test_authority.py  test_smoke.py  test_sqlite_v2.py
test/: run_engine_comparison.py
test/engine-comparisons/: 2026-04-27_01-47-14.csv  2026-04-27_16-54-29_p10_times.csv  2026-04-27_17-01-34_p10_times.csv
test/test-cases/: test-cases-1.csv
test/time-logs/: time-v2.txt  times-v1.txt  times-v2.txt
