[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queryquote"
version = "0.1.0"
description = "Movie quote information retrieval system with lexical and quote-aware matching"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "QueryQuote Team" }]
dependencies = [
    "flask>=2.3.0",
]

[project.scripts]
queryquote = "queryquote.cli:main"
queryquote-web = "queryquote.webapp:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
